--- a/app/views/api/metrics/_top_level.html.erb
+++ b/app/views/api/metrics/_top_level.html.erb
@@ -1,2 +1,4 @@
 <%= render 'api/metrics/metric', :metric => metric %>
-<%= render partial: 'api/metrics/metric', collection: metric.children %>
+<% if local_assigns[:include_children] %>
+  <%= render partial: 'api/metrics/metric', collection: metric.children %>
+<% end %>
