--- a/app/views/api/plans/_metrics.html.erb
+++ b/app/views/api/plans/_metrics.html.erb
@@ -10,8 +10,12 @@
     <thead>
       <tr>
         <th colspan="<%= @plan.pricing_enabled? ? 4 : 3 %>">
-          Metric or Method
-          (<%= link_to 'Define', admin_service_metrics_path(@service), title: 'Define Methods & Metrics for this service' %>)
+          <% if @service.acts_as_product? -%>
+            Product Level
+          <% else -%>
+            Metric or method
+          <% end -%>
+          (<%= link_to 'Define method or metric', admin_service_metrics_path(@service), title: 'Define Methods & Metrics for this service' %>)
         </th>
         <th class="operations">
           Enabled
@@ -49,8 +53,57 @@
           </td>
         </tr>
       <% else -%>
-        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.top_level_metrics %>
+        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.top_level_metrics, locals: { include_children: @service.acts_as_traditional_service? } %>
       <% end -%>
     </tbody>
   </table>
+
+  <% if @service.acts_as_product? -%>
+  <table id="backend_api_metrics" class="contract_table">
+    <thead>
+      <tr>
+        <th colspan="<%= @plan.pricing_enabled? ? 4 : 3 %>">
+          Backend Level
+        </th>
+        <th class="operations">
+          Enabled
+          <%= help_bubble do %>
+            <h3>Enabled</h3>
+            <p>Sets whether the metric or method is enabled or disabled for the plan.</p>
+          <% end %>
+        </th>
+        <th class="operations">
+          Visible
+          <%= help_bubble do %>
+            <h3>Visible</h3>
+            <p>Sets whether the metric or method will be displayed in the plan's widget.</p>
+          <% end %>
+        </th>
+        <th class="operations">
+          Text only
+          <%= help_bubble do %>
+            <h3>Text only</h3>
+            <p>Sets whether limits are shown in plan's widget
+            using text only (default) or using icons and text. Disabled methods will
+            show only icons and not text.</p>
+          <% end %>
+        </th>
+        <th class="operations">
+        </th>
+      </tr>
+    </thead>
+
+    <tbody id="metrics_container">
+      <% if @service.metrics.empty? -%>
+        <tr class="notice" style="display:none">
+          <td colspan="<%= @plan.pricing_enabled? ? 5 : 4 %>">
+            This plan has no metrics yet.
+          </td>
+        </tr>
+      <% else -%>
+        <%= render partial: 'api/metrics/backend_api', as: :backend_api, collection: @service.backend_apis %>
+      <% end -%>
+    </tbody>
+  </table>
+  <% end -%>
 </div>
