--- a/app/views/api/integrations/apicast/script_driven/_staging.html.slim
+++ b/app/views/api/integrations/apicast/script_driven/_staging.html.slim
@@ -23,7 +23,7 @@
     div class=("feedback api #{'success' if @proxy.api_test_success} #{'no-test' if @proxy.api_test_path.blank? or @proxy.api_test_success.nil?}")
       i.fa.fa-puzzle-piece
       = f.inputs "API" do
-        = f.input :api_backend, input_html: { data: { default: @proxy.default_api_backend } }, hint: is_https?(@proxy.api_backend) ? t('formtastic.hints.proxy.api_backend_https') : t('formtastic.hints.proxy.api_backend_http')
+        = f.input :api_backend, input_html: { data: { default: @proxy.default_api_backend } }, hint: api_backend_hint(@proxy.api_backend)
         = help_bubble( 'api_endpoint_bubble', t('api.integrations.proxy.api_endpoint_help_html'))
 
     div class=("feedback proxy #{'success' if @proxy.api_test_success} #{'no-test' if @proxy.api_test_path.blank? or @proxy.api_test_success.nil?}")
