implements labels inside expandable navs

--- a/app/assets/stylesheets/provider/_vertical_nav.scss
+++ b/app/assets/stylesheets/provider/_vertical_nav.scss
@@ -10,3 +10,11 @@
   // Give nested label more padding
   padding-left: var(--pf-c-nav__simple-list-link--nested--PaddingLeft) !important;
 }
+
+.vertical-nav-label {
+  // FIXME: for some reason PF4 styles do not apply properly and margin gets overridden
+  padding-top: var(--pf-c-nav__section-title--PaddingTop) !important;
+  padding-right: var(--pf-c-nav__section-title--PaddingRight) !important;
+  padding-left: var(--pf-c-nav__simple-list-link--nested--PaddingLeft) !important;
+  padding-bottom: var(--pf-c-nav__section-title--PaddingBottom) !important;
+}
