:poop: fixes dashboard padding by adding hardcoded PF4 value

--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -34,11 +34,12 @@
 // }
 
 .Main {
-  // This should be eventually done by PF
-  padding-top: var(--pf-c-page__main-section--PaddingTop);
-  padding-right: var(--pf-c-page__main-section--PaddingRight);
-  padding-bottom: var(--pf-c-page__main-section--PaddingBottom);
-  padding-left: var(--pf-c-page__main-section--PaddingLeft);
+  // HACK: import PF4 styles instead of use hardcoded value. In the future it will be included in PF class.
+  padding: 25px !important;
+  // padding-top: var(--pf-c-page__main-section--PaddingTop);
+  // padding-right: var(--pf-c-page__main-section--PaddingRight);
+  // padding-bottom: var(--pf-c-page__main-section--PaddingBottom);
+  // padding-left: var(--pf-c-page__main-section--PaddingLeft);
 
   min-height: calc(100vh - #{line-height-times(10)});
 
