--- a/app/assets/stylesheets/provider/_vertical_nav.scss
+++ b/app/assets/stylesheets/provider/_vertical_nav.scss
@@ -6,10 +6,7 @@
   margin-left: auto !important; // FIXME: for some reason PF4 styles do not apply properly and margin gets overridden
 }
 
-.vertical-nav-label {
-  // FIXME: for some reason PF4 styles do not apply properly and margin gets overridden
-  padding-top: var(--pf-c-nav__section-title--PaddingTop) !important;
-  padding-right: var(--pf-c-nav__section-title--PaddingRight) !important;
+.pf-c-nav__section-title {
+  // Give nested label more padding
   padding-left: var(--pf-c-nav__simple-list-link--nested--PaddingLeft) !important;
-  padding-bottom: var(--pf-c-nav__section-title--PaddingBottom) !important;
 }
