uses patternfly classes and structure

--- a/app/views/shared/provider/navigation/_vertical_nav.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav.html.slim
@@ -1,3 +1,3 @@
 = javascript_pack_tag 'vertical_nav'
 
-#vertical-nav-wrapper data-sections=vertical_nav_sections data-active_section=active_submenu data-active_item=active_sidebar
+#vertical-nav-wrapper class='pf-c-page__sidebar' data-sections=vertical_nav_sections data-active_section=active_submenu data-active_item=active_sidebar
