--- a/app/assets/stylesheets/provider/_header.scss
+++ b/app/assets/stylesheets/provider/_header.scss
@@ -1,11 +1,4 @@
 .Header {
-  background-color: $header-background-color;
-  height: line-height-times(63 / 20);
-  padding: 0;
-  position: fixed;
-  width: 100%;
-  z-index: 1052; // select2 dropdown has z-index of 1051
-  top: 0;
 
   &--master {
     border-top: line-height-times(1) solid $header-border-color;
@@ -53,5 +46,9 @@
     @include inline-block-list;
     float: left;
     list-style: none;
+  }
+
+  .pf-c-page__header-nav {
+    align-self: center;
   }
 }
