renames login wrapper since style is overriden

--- a/app/views/layouts/provider/login.html.slim
+++ b/app/views/layouts/provider/login.html.slim
@@ -22,6 +22,6 @@ html lang="en"
     div id="wrapper"
       div.login-logo
         | Red Hat 3scale API Management
-      div id='border' class="self_clear"
+      div id='login-border' class="self_clear"
         = yield
         = render "shared/provider/flash", flash: flash
