:rotating_light: ignores PF assets and fixes some issues

--- a/app/assets/stylesheets/provider/_theme.scss
+++ b/app/assets/stylesheets/provider/_theme.scss
@@ -107,4 +107,4 @@
 @import 'provider/print';
 
 @import 'provider/vertical_nav';
-@import 'provider/patternfly_ie11'
+@import 'provider/patternfly_ie11';
