--- a/app/javascript/src/LoginPage/assets/styles/loginPage.scss
+++ b/app/javascript/src/LoginPage/assets/styles/loginPage.scss
@@ -1,3 +1,15 @@
+// HACK
+// This is a hack to hide the old login page and avoid flickering when replaced by the new one
+// It's needed because whit display:none, visibility:hidden or negative margins cukes can't find the elements
+#old-login-page-wrapper * {
+  color: transparent!important;
+  background-color: transparent!important;
+  border: none;
+  height: 0;
+  width: 0;
+}
+// End of HACK
+
 $pf-black-500:  #8b8d8f; // $osloGray
 $--pf-global--danger-color--100: #c9190b;
 $--pf-global--info-color--200:	#004368;
