--- a/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
@@ -1,20 +1,21 @@
 - title = section[:title]
 - path = section[:path]
 - items = section[:items]
+- is_section_active = active_section == section[:id]
 
-/ TODO: highlight items when active
 - if items == nil
-  li.pf-c-nav__item
+  li.pf-c-nav__item class=('pf-m-current' if is_section_active)
     = link_to path, class: 'pf-c-nav__link' do
       = title
 
 - else
-  li.pf-c-nav__item class='pf-m-expandable pf-m-expanded'
+  li.pf-c-nav__item class='pf-m-expandable pf-m-expanded' class=('pf-m-current' if is_section_active)
     a.pf-c-nav__link
       = title
     section.pf-c-nav__subnav
       ul.pf-c-nav__simple-list
         - items.each do |item|
-          li.pf-c-nav__item
+          - is_item_active = is_section_active && active_item == item[:id]
+          li.pf-c-nav__item class=('pf-m-current' if is_item_active)
             = link_to item[:path], class: 'pf-c-nav__link' do
               = item[:title]
