prevents calling each on nil array

--- a/app/views/shared/provider/navigation/_vertical_nav.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav.html.slim
@@ -1,6 +1,6 @@
 = javascript_pack_tag 'vertical_nav'
 
-- sections = vertical_nav_sections
+- sections = vertical_nav_sections || []
 - active_section = active_submenu
 - active_item = active_sidebar
 
