subnav titles have to be links

--- a/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
@@ -10,7 +10,7 @@
 
 - else
   li.pf-c-nav__item class='pf-m-expandable pf-m-expanded' class=('pf-m-current' if is_section_active)
-    a.pf-c-nav__link
+    a.pf-c-nav__link href='#!'
       = title
     section.pf-c-nav__subnav
       ul.pf-c-nav__simple-list
