Adding PF4 Header

--- a/app/assets/stylesheets/provider/_colors.scss
+++ b/app/assets/stylesheets/provider/_colors.scss
@@ -21,6 +21,8 @@ $guardsmanRed:   #cc0000;
 $tahitiGold:     #ec7a08;
 
 // brand colors
+$pf4-brand-dark-bg: rgba(3, 3, 3, .62);
+$pf4-brand-icons-color: rgb(237, 237, 237);
 $brand-orange: #ff7314;
 $twitter-color: #55acee;
 $facebook-color: #3b5998;
