--- a/app/javascript/src/LoginPage/assets/styles/loginPage.scss
+++ b/app/javascript/src/LoginPage/assets/styles/loginPage.scss
@@ -1,15 +1,20 @@
 // HACK
 // This is a hack to hide the old login page and avoid flickering when replaced by the new one
 // It's needed because whit display:none, visibility:hidden or negative margins cukes can't find the elements
-#old-login-page-wrapper * {
-  color: transparent!important;
-  background-color: transparent!important;
-  border: none;
+
+// scss-lint:disable ImportantRule
+.login-layout #old-login-page-wrapper * {
+  background-color: transparent !important;
+  border: 0;
+  color: transparent !important;
   height: 0;
   width: 0;
 }
+// scss-lint:enable ImportantRule
+
 // End of HACK
 
+// scss-lint:disable SelectorFormat
 $pf-black-500:  #8b8d8f; // $osloGray
 $--pf-global--danger-color--100: #c9190b;
 $--pf-global--info-color--200:	#004368;
@@ -25,7 +30,7 @@ $--pf-global--info-color--200:	#004368;
   }
 
   .login-provider {
-    padding: 0.3rem 0;
+    padding: .3rem 0;
 
     .login-provider-link:hover {
       text-decoration: none;
@@ -41,7 +46,7 @@ $--pf-global--info-color--200:	#004368;
   .pf-c-form__helper-text {
     margin: 1rem 0;
     svg {
-      margin-right: 0.3rem;
+      margin-right: .3rem;
     }
   }
   .pf-m-error {
