:lipstick: header in master account creates double scroll bar

--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -5,6 +5,7 @@
   // padding-left: line-height-times(1); This is added by Patternfly, value: var(--pf-c-nav__list-link--PaddingTop) var(--pf-c-nav__list-link--PaddingRight) var(--pf-c-nav__list-link--PaddingBottom) var(--pf-c-nav__list-link--PaddingLeft)
   // padding-right: line-height-times(1); TODO: this should be delegated to Patternfly or at least use the same measures as PF.
   position: relative;
+  overflow: hidden;
 }
 
 #border {
