--- a/app/assets/stylesheets/provider/_header.scss
+++ b/app/assets/stylesheets/provider/_header.scss
@@ -1,5 +1,7 @@
 .Header {
 
+  height: 76px; // HACK: hardcoded value of PF4 Header hight.
+
   &--master {
     border-top: line-height-times(1) solid $header-border-color;
 
