--- a/app/javascript/src/LoginPage/assets/styles/loginPage.scss
+++ b/app/javascript/src/LoginPage/assets/styles/loginPage.scss
@@ -37,7 +37,6 @@ $--pf-global--info-color--200:	#004368;
     }
   }
 
-
   .providers-separator {
     margin-top: 1rem;
     text-align: center;
@@ -55,5 +54,57 @@ $--pf-global--info-color--200:	#004368;
 
   .pf-m-notice {
     color: $--pf-global--info-color--200;
+  }
+}
+
+/****** Override styles for IE 11  ******/
+.isIe11 {
+  .pf-c-login {
+    .pf-c-login__container {
+      display: block;
+      padding-right: 6.125rem;
+      padding-left: 6.125rem;
+      width: 90%;
+      padding: 10% 5%;
+
+      .pf-c-login__main {
+        display: block;
+        width: 45%;
+        float: left;
+
+        .pf-c-login__main-body {
+          .pf-c-form {
+            .pf-c-form__group {
+              .pf-c-form__actions {
+                .pf-c-button.pf-m-primary {
+                  background-color: #06c;
+                  border-radius: 3px;
+                  color: #fff;
+                  padding: 6px 16px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .pf-c-login__header {
+        display: block;
+        width: 45%;
+        float: right;
+      }
+
+      @media (max-width: 768px) {
+        .pf-c-login__main {
+          display: block;
+          width: 100%;
+          float: left;
+        }
+        .pf-c-login__header {
+          display: block;
+          width: 100%;
+          float: left;
+        }
+      }
+    }
   }
 }
