:bug: fixes master header height

--- a/app/assets/stylesheets/provider/_header.scss
+++ b/app/assets/stylesheets/provider/_header.scss
@@ -1,11 +1,12 @@
+$header-height: line-height-times(63 / 20);
 $master-ribbon-height: line-height-times(1);
 
 .Header {
 
-  height: 76px; // HACK: hardcoded value of PF4 Header hight.
+  height: $header-height; 
 
   &--master {
-    height: calc(76px + $master-ribbon-height); // HACK: hardcoded value of PF4 Header hight.
+    height: $header-height + $master-ribbon-height;
     border-top: $master-ribbon-height solid $header-border-color;
 
     &:before {
