--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -36,7 +36,7 @@ body {
 
 .Main {
   // HACK: import PF4 styles instead of use hardcoded value. In the future it will be included in PF class.
-  padding: 25px !important;
+  padding: line-height-times(1);
 
   &--callToAction {
     min-height: calc(100vh - #{line-height-times(12)});
