:lipstick: sets proper spacing to flash message

--- a/app/assets/stylesheets/provider/_flash.scss
+++ b/app/assets/stylesheets/provider/_flash.scss
@@ -1,7 +1,7 @@
 #flashWrapper {
   position: absolute;
-  right: 0;
-  top: line-height-times(0.5);
+  right: line-height-times(1);
+  top: line-height-times(1);
   text-align: right;
   @include animation(fadeInLeft 0.5s ease-in-out);
 }
