Moving import of login page to login.html.slim

--- a/app/views/layouts/provider/login.html.slim
+++ b/app/views/layouts/provider/login.html.slim
@@ -17,4 +17,5 @@ html lang="en"
     # are split Provider/Buyer side
 
   body class="login-layout"
+    = javascript_pack_tag 'LoginPage'
     = yield
